<resources>
    <string name="app_name">Auction Hub</string>
    <string name="login_text">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="upload_your_image">Upload your image</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="wallet">Wallet</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="about_us">About Us</string>
    <string name="winning_history">Winning History</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="share_us">Share Our App</string>
    <string name="bid">Bid</string>
    <string name="sell">Sell</string>
    <string name="settings">Settings</string>

    <string name="error_name">Name not found</string>
    <string name="error_email">Email not found</string>
    <string name="edit_picture">Edit Picture</string>
    <string name="update">Update</string>
    <string name="timer">Timer</string>
    <string name="item_name">Item Name</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="minimum_amount">Minimum Amount</string>
    <string name="item_description">Item Description</string>
    <string name="upload_item_photo">Upload Item Photo</string>
    <string name="expired_in">Expired in:</string>
    <string name="date_and_time">Date and Time</string>
    <string name="_0">₹ 0</string>

    <!--  wallet dialog buttons  -->
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="available_balance">Available Balance</string>
    <string name="ah_premium_wallet">AH Premium Wallet</string>
    <string name="added_to_wallet">Added to Wallet</string>
    <string name="current_highest_bid">Current Highest Bid:</string>
    <string name="no_items_to_show">No items to show!</string>
    <string name="my_items">My Items</string>
    <string name="purchased_amount">Purchased Amount:</string>
    <string name="items_you_post_for_auction_will_be_shown_here">Items you post for Auction will be shown here...</string>
    <string name="item_status">Item Status:</string>

</resources>