<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <RelativeLayout
        android:id="@+id/trans_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/bank_logo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_inr" />

        <TextView
            android:id="@+id/trans_reason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="2dp"
            android:layout_toEndOf="@id/bank_logo"
            android:text="@string/app_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/trans_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/trans_reason"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="15dp"
            android:layout_toEndOf="@id/bank_logo"
            android:text="@string/date_and_time"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/trans_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/_0"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_below="@id/trans_layout"
        android:layout_marginVertical="10dp"
        android:background="@android:color/darker_gray" />

</RelativeLayout>